# CWNU_Unitree_Go2

./: README.md  go2_lidar_planner  lidar_transformer_node.py  prepare_oak_yolo_docker.sh  setup.cfg
detect_3d_object/: package.xml  setup.py
detect_3d_object/detect_3d_object/: detect_3d_object_node.py
detect_3d_object/launch/: 3_detect_3d.launch.xml  (+1 more)
docker/oak_yolo_docker/: Dockerfile  (+6 more)
go2_lidar_planner/: install_go2_lidar_device.sh  package.xml  setup.cfg  setup.py
go2_lidar_planner/go2_lidar_planner/: go2_path_follower_node.py  lidar_accumulator_node.py  potential_astar_planner_node.py
go2_lidar_planner/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
go2_lidar_planner/install/go2_lidar_planner/lib/go2_lidar_planner/: go2_path_follower_node  lidar_accumulator_node  lidar_transformer_node  potential_astar_planner_node
go2_lidar_planner/install/go2_lidar_planner/share/go2_lidar_planner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
go2_lidar_planner/install/go2_lidar_planner/share/go2_lidar_planner/launch/: go2_lidar_planner.launch.py
go2_lidar_planner/launch/: go2_lidar_planner.launch.py
go2_lidar_planner/log/: latest_build
go2_lidar_planner/src/: package.xml
go2_lidar_planner/src/go2_lidar_planner/: go2_path_follower_node.py  lidar_accumulator_node.py  lidar_transformer_node.py  potential_astar_planner_node.py
go2_lidar_planner/src/launch/: go2_lidar_planner.launch.py
local_lidar_planner/: package.xml
oak_yolo_target/: install_oak_yolo_device.sh  package.xml
oak_yolo_target/launch/: oak_yolo_target.launch.py
oak_yolo_target/oak_yolo_target/: yolo_target_node.py
(+7 files in other folders)
