<?xml version="1.0"?>
<package format="3">
  <name>oak_yolo_target</name>
  <version>0.1.0</version>
  <description>OAK RGB-D to robot-frame person target using native Ultralytics YOLO tracking.</description>
  <maintainer email="oblivionwine@gmail.com">CWNU Go2 Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>depthai_ros_driver</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
